[gd_scene load_steps=27 format=2]

[ext_resource path="res://font/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/ControlsGD/ControlsScreen.gd" type="Script" id=2]
[ext_resource path="res://font/fontezona.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
extra_spacing_top = 12
extra_spacing_bottom = 6
extra_spacing_space = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=6]
Button/styles/disabled = null
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=11]
size = 25
extra_spacing_top = 5
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=18]
Button/styles/disabled = null
Button/styles/focus = SubResource( 14 )
Button/styles/hover = SubResource( 15 )
Button/styles/normal = SubResource( 16 )
Button/styles/pressed = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=23]
size = 25
extra_spacing_top = 5
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preto Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.415686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -437.682
margin_top = -141.955
margin_right = 434.318
margin_bottom = 226.045
custom_fonts/font = SubResource( 1 )
text = "          Configurações:
Volume da Música: 

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen_Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -443.339
margin_top = -19.1948
margin_right = 272.661
margin_bottom = 118.805
custom_fonts/font = SubResource( 1 )
text = "Habilitar Tela Cheia: |  |

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sem_Borda_Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -445.0
margin_top = 13.5883
margin_right = 193.0
margin_bottom = 104.588
custom_fonts/font = SubResource( 1 )
text = "
Habilitar Sem Borda:   "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Node" parent="."]

[node name="abaixa_volume" type="Button" parent="Volume"]
margin_left = 586.817
margin_top = 215.144
margin_right = 676.817
margin_bottom = 265.144
rect_pivot_offset = Vector2( -1180.32, -182.84 )
theme = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.713726, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.560784, 0.00392157, 1 )
text = "<<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Volume"]
margin_left = 665.0
margin_top = 208.0
margin_right = 772.0
margin_bottom = 255.0
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 13 )
custom_fonts/font = ExtResource( 3 )
min_value = -30.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aumenta_volume" type="Button" parent="Volume"]
margin_left = 758.611
margin_top = 212.692
margin_right = 848.611
margin_bottom = 262.692
rect_pivot_offset = Vector2( -1180.32, -182.84 )
theme = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.713726, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.560784, 0.00392157, 1 )
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 153.643
margin_top = 55.6674
margin_right = 273.643
margin_bottom = 105.667
custom_fonts/font = SubResource( 1 )
text = "|  |"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tela_cheiona" type="Button" parent="."]
margin_left = 690.652
margin_top = 289.67
margin_right = 738.652
margin_bottom = 339.67
rect_pivot_offset = Vector2( -1180.32, -182.84 )
theme = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.713726, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.560784, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tela_sem_borda" type="Button" parent="."]
margin_left = 702.339
margin_top = 360.674
margin_right = 751.339
margin_bottom = 410.674
rect_pivot_offset = Vector2( -1180.32, -182.84 )
theme = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.713726, 0.713726, 0.713726, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.560784, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controller" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.5
margin_top = -50.0
margin_right = 79.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="Controller"]
margin_right = 200.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -1180.32, -182.84 )
theme = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.890196, 0.780392, 0.152941, 1 )
custom_colors/font_color_pressed = Color( 0.843137, 0.560784, 0.00392157, 1 )
text = "Retornar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Volume/abaixa_volume" to="." method="_on_abaixa_volume_pressed"]
[connection signal="value_changed" from="Volume/ProgressBar" to="." method="_on_ProgressBar_value_changed"]
[connection signal="pressed" from="Volume/aumenta_volume" to="." method="_on_aumenta_volume_pressed"]
[connection signal="pressed" from="tela_cheiona" to="." method="_on_tela_cheiona_pressed"]
[connection signal="pressed" from="tela_sem_borda" to="." method="_on_tela_sem_borda_pressed"]
[connection signal="pressed" from="Controller/Return" to="." method="_on_Return_pressed"]
